--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donation from Modok Family</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 
 </head>
+<section class="banner">
+    <h1>Let's Help Those <br> Who Are More In Need</h1>
+    <p>To start a war you need huge money to buy guns but to make it beautiful you just need your wise decision </p>
+
+    <a class="button" href="https://www.pobitro.com/" target="_blank">Donate Now</a>
+</section>
 
 <body>
 
