--- a/index.html
+++ b/index.html
@@ -19,6 +19,49 @@
     <a class="button" href="https://www.pobitro.com/" target="_blank">Donate Now</a>
 </section>
 
+<section class="DonateToday">
+
+    <div>
+        <h1>Donate Today</h1>
+        <p>You can donate any amount event $1 will be make the chagnes for the world. Do you know what <br>your $1 can
+            buy
+            for the people who are in need</p>
+    </div>
+
+    <div class="Alldonate">
+        <div class="amount">
+            <p>BDT 100</p>
+        </div>
+
+        <div class="amount">
+            <p>BDT 200</p>
+        </div>
+
+        <div class="amount">
+            <p>BDT 500</p>
+        </div>
+
+        <div class="amount">
+            <p>BDT 1000</p>
+        </div>
+        <div class="amount selectAmount">
+            <p>BDT 5000</p>
+        </div>
+    </div>
+
+    <div class="otherAmount">
+        <p>
+            Other Amount (Taka)
+            <hr>
+        </p>
+    </div>
+
+    <div>
+        <a class="button" href="https://www.pobitro.com/" target="_blank">Donate Now</a>
+    </div>
+
+</section>
+
 <body>
 
 </body>
