--- a/index.html
+++ b/index.html
@@ -59,7 +59,63 @@
     <div>
         <a class="button" href="https://www.pobitro.com/" target="_blank">Donate Now</a>
     </div>
+</section>
 
+<section class="DonationPlan">
+    <div>
+        <h1> Our Donation Plan</h1>
+        <p id="DoPlan">Unlike other donar angency we plan to create a social impact toward the betterment of the world.
+            For this we
+            have
+            several donation plan. Those followings only some of them you may check what donation plan we have in the
+            Top
+        </p>
+    </div>
+
+    <div class="CardsPlan">
+        <div class="plan">
+            <div>
+                <div><img src="icons/shelter.png" alt=""></div>
+            </div>
+
+            <div>
+                <h2>Shelter for a Family</h2>
+                <p>Do you know just 20% of everyday's waste food can feed an entire family in an African village. Please
+                    do
+                    not waste food if you can please donate it for the humanity</p>
+            </div>
+        </div>
+
+
+        <div class="planTwo">
+            <div>
+                <div><img src="icons/Frame-1.png" alt=""></div>
+            </div>
+
+            <div>
+                <h2>Education for a Child</h2>
+                <p>Do you know just 20% of everyday's waste food can feed an entire family in an African village. Please
+                    do
+                    not waste food if you can please donate it for the humanity</p>
+            </div>
+        </div>
+
+
+        <div class="planThree">
+            <div>
+                <div><img src="icons/food.png" alt=""></div>
+            </div>
+
+            <div>
+                <h2>Food for a Family</h2>
+                <p>Do you know just 20% of everyday's waste food can feed an entire family in an African village. Please
+                    do
+                    not waste food if you can please donate it for the humanity</p>
+            </div>
+        </div>
+
+
+    </div>
 </section>
 
 <body>
