--- a/index.html
+++ b/index.html
@@ -12,114 +12,161 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<section class="banner">
-    <h1>Let's Help Those <br> Who Are More In Need</h1>
-    <p>To start a war you need huge money to buy guns but to make it beautiful you just need your wise decision </p>
-
-    <a class="button" href="https://www.pobitro.com/" target="_blank">Donate Now</a>
-</section>
-
-<section class="DonateToday">
-
-    <div>
-        <h1>Donate Today</h1>
-        <p>You can donate any amount event $1 will be make the chagnes for the world. Do you know what <br>your $1 can
-            buy
-            for the people who are in need</p>
-    </div>
-
-    <div class="Alldonate">
-        <div class="amount">
-            <p>BDT 100</p>
-        </div>
-
-        <div class="amount">
-            <p>BDT 200</p>
-        </div>
-
-        <div class="amount">
-            <p>BDT 500</p>
-        </div>
-
-        <div class="amount">
-            <p>BDT 1000</p>
-        </div>
-        <div class="amount selectAmount">
-            <p>BDT 5000</p>
-        </div>
-    </div>
-
-    <div class="otherAmount">
-        <p>
-            Other Amount (Taka)
-            <hr>
-        </p>
-    </div>
-
-    <div>
-        <a class="button" href="https://www.pobitro.com/" target="_blank">Donate Now</a>
-    </div>
-</section>
-
-<section class="DonationPlan">
-    <div>
-        <h1> Our Donation Plan</h1>
-        <p id="DoPlan">Unlike other donar angency we plan to create a social impact toward the betterment of the world.
-            For this we
-            have
-            several donation plan. Those followings only some of them you may check what donation plan we have in the
-            Top
-        </p>
-    </div>
-
-    <div class="CardsPlan">
-        <div class="plan">
-            <div>
-                <div><img src="icons/shelter.png" alt=""></div>
-            </div>
-
-            <div>
-                <h2>Shelter for a Family</h2>
-                <p>Do you know just 20% of everyday's waste food can feed an entire family in an African village. Please
-                    do
-                    not waste food if you can please donate it for the humanity</p>
-            </div>
-        </div>
-
-
-        <div class="planTwo">
-            <div>
-                <div><img src="icons/Frame-1.png" alt=""></div>
-            </div>
-
-            <div>
-                <h2>Education for a Child</h2>
-                <p>Do you know just 20% of everyday's waste food can feed an entire family in an African village. Please
-                    do
-                    not waste food if you can please donate it for the humanity</p>
-            </div>
-        </div>
-
-
-        <div class="planThree">
-            <div>
-                <div><img src="icons/food.png" alt=""></div>
-            </div>
-
-            <div>
-                <h2>Food for a Family</h2>
-                <p>Do you know just 20% of everyday's waste food can feed an entire family in an African village. Please
-                    do
-                    not waste food if you can please donate it for the humanity</p>
-            </div>
-        </div>
-
-
-    </div>
-</section>
 
 <body>
+    <section class="banner">
+        <h1>Let's Help Those <br> Who Are More In Need</h1>
+        <p>To start a war you need huge money to buy guns but to make it beautiful you just need your wise decision </p>
 
+        <a class="button" href="https://www.pobitro.com/" target="_blank">Donate Now</a>
+    </section>
+
+    <section class="DonateToday">
+
+        <div>
+            <h1>Donate Today</h1>
+            <p>You can donate any amount event $1 will be make the chagnes for the world. Do you know what <br>your $1
+                can
+                buy
+                for the people who are in need</p>
+        </div>
+
+        <div class="Alldonate">
+            <div class="amount">
+                <p>BDT 100</p>
+            </div>
+
+            <div class="amount">
+                <p>BDT 200</p>
+            </div>
+
+            <div class="amount">
+                <p>BDT 500</p>
+            </div>
+
+            <div class="amount">
+                <p>BDT 1000</p>
+            </div>
+            <div class="amount selectAmount">
+                <p>BDT 5000</p>
+            </div>
+        </div>
+
+        <div class="otherAmount">
+            <p>
+                Other Amount (Taka)
+                <hr>
+            </p>
+        </div>
+
+        <div>
+            <a class="button" href="https://www.pobitro.com/" target="_blank">Donate Now</a>
+        </div>
+    </section>
+
+    <section class="DonationPlan">
+        <div>
+            <h1> Our Donation Plan</h1>
+            <p id="DoPlan">Unlike other donar angency we plan to create a social impact toward the betterment of the
+                world.
+                For this we
+                have
+                several donation plan. Those followings only some of them you may check what donation plan we have in
+                the
+                Top
+            </p>
+        </div>
+
+        <div class="CardsPlan">
+            <div class="plan">
+                <div>
+                    <div><img src="icons/shelter.png" alt=""></div>
+                </div>
+
+                <div>
+                    <h2>Shelter for a Family</h2>
+                    <p>Do you know just 20% of everyday's waste food can feed an entire family in an African village.
+                        Please
+                        do
+                        not waste food if you can please donate it for the humanity</p>
+                </div>
+            </div>
+
+
+            <div class="planTwo">
+                <div>
+                    <div><img src="icons/Frame-1.png" alt=""></div>
+                </div>
+
+                <div>
+                    <h2>Education for a Child</h2>
+                    <p>Do you know just 20% of everyday's waste food can feed an entire family in an African village.
+                        Please
+                        do
+                        not waste food if you can please donate it for the humanity</p>
+                </div>
+            </div>
+
+
+            <div class="planThree">
+                <div>
+                    <div><img src="icons/food.png" alt=""></div>
+                </div>
+
+                <div>
+                    <h2>Food for a Family</h2>
+                    <p>Do you know just 20% of everyday's waste food can feed an entire family in an African village.
+                        Please
+                        do
+                        not waste food if you can please donate it for the humanity</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="featureSection">
+        <div class="text">
+            <h1>Their lives depend on your donation</h1>
+            <p>The more you donate the more you help them. They need Your kind support during this bad time. Even every
+                personnel can face this issue anytime.</p>
+            <p>Your help will not go in blind, you will have the right access to whom you helped</p>
+            <a class="Contribute" href="https://www.pobitro.com" target="_blank">How to Contribute?</a>
+        </div>
+
+        <div> <img src="images/donation11.jpg" alt=""></div>
+    </section>
+
+    <section class="featureSection">
+        <div> <img src="images/donation13.jpg" alt=""></div>
+
+        <div class="text">
+            <h1>Their lives depend on your donation</h1>
+            <p>The more you donate the more you help them. They need Your kind support during this bad time. Even every
+                personnel can face this issue anytime.</p>
+            <p>Your help will not go in blind, you will have the right access to whom you helped</p>
+            <a class="Contribute" href="https://www.pobitro.com" target="_blank">How to Contribute?</a>
+        </div>
+    </section>
+
+    <section class="footerFeatures">
+        <div>
+            <h1>Get My Updates</h1>
+            <p>Enroll to our daily mailing list, you will see how helpful the world is.</p>
+        </div>
+
+        <div class="emailSubscribe">
+            <div class="subscribe">
+                <p id="email">Email</p>
+                <div>
+                    <p id="sub">Subscribe</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <h1>Be Humble</h1>
+    <p>I have done it thought it is not good enough</p>
+</footer>
 
 </html>
